# pico-dev

./: .gitignore  README.md
gmcount/: CMakeLists.txt  README.txt  api_ds3231.c  fatfs.c  gmcount.c  init_project.sh  load_gmcount.sh  start_minicom.sh  wifi.c
rtc/: CMakeLists.txt  init_project.sh  load_rtc.sh  rtc.c  use_ds3231.c  wbuild.sh
scsd/: load_scsd.sh  xbuild.sh
sdsc/: CMakeLists.txt  hw_config.c  load_sdsc.sh  simple_example.cpp
wifi/: CMakeLists.txt  load_wifi.sh  main.c  udp_client.py  udp_server.py  wbuild.sh  wifi.c
wifi2/: CMakeLists.txt  init_project.sh  load_wifi.sh  lwipopts.h  main.c  wbuild.sh  xload_wifi.sh
